crates/swc_ecma_parser/tests/test262-error-references/fail/c0a8cdfa09f3b86c.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/c0a8cdfa09f3b86c.js:1:13
  |
1 | function*g([yield]){}
  |             ^^^^^

